# cube

./: CHANGELOG.md  pyproject.toml
docs/: etcion-cheatsheet.md
docs/adr/: ADR-049-relationship-name-optional.md
src/etcion/: builder.py
src/etcion/metamodel/: concepts.py
src/etcion/serialization/: csv.py  json.py  parquet.py  xml.py
test/: test_packaging.py  test_scaffold.py
test/metamodel/: test_concepts.py  test_relationships.py
test/serialization/: test_csv.py  test_json.py  test_xml.py
