[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "etcion"
version = "0.11.0"
description = "Architecture as code — build, query, validate, and analyze enterprise architecture models in Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "etcion contributors" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
keywords = ["archimate", "enterprise-architecture", "metamodel", "archi", "open-group", "architecture-as-code"]
dependencies = [
    "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
xml = ["lxml>=5.0,<7.0"]
graph = ["networkx>=3.0,<4.0"]
dataframe = ["pandas>=2.0"]
parquet = ["pandas>=2.0", "pyarrow>=14.0"]
duckdb = ["pandas>=2.0", "duckdb>=0.10"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "pydantic>=2.0,<3.0",
    "ruff>=0.4",
    "lxml>=5.0,<7.0",
    "networkx>=3.0,<4.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "duckdb>=0.10",
    "pyyaml>=6.0",
    "build>=1.0",
    "twine>=5.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.urls]
Homepage = "https://github.com/korpodevs/etcion"
Documentation = "https://korpodevs.github.io/etcion/"
Repository = "https://github.com/korpodevs/etcion"
Issues = "https://github.com/korpodevs/etcion/issues"
Changelog = "https://github.com/korpodevs/etcion/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/etcion"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external resources",
    "e2e: alias for integration; marks end-to-end tests (deselect with '-m \"not e2e\"')",
]

[tool.ruff]
target-version = "py312"
src = ["src", "test"]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "I", "ANN", "B"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"test/**" = ["ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "test.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = "lxml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "networkx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyarrow.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "duckdb"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "etcion.serialization.parquet"
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "etcion.serialization.duckdb_export"
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "etcion.serialization.xml"
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "etcion.metamodel.model"
disable_error_code = ["import-untyped"]
